- Adjusted test_dut_ngspice to the new DutNgspice
- Updated to pyqtgraph 0.13.1. QApplication in plot.py from QWidgets is tried to use, if this does not work, fall back to old implementation from Qt.QtGui
- Renamed VAFile to VAFileMap to better reflect its nature. It is a mapping from filename (incl. rel path) to the file content (code).

### Removed

- Removed gitlab.com repository from pipeline.

## Fixed

- DataFrame.check_ss_cols: Fixed bug where column name was identified as a SS-Parameter falsely
- DataFrame.get_ss_para: Checking for ALL found SS-Parameters not just one.

## [1.7.0] - 2022.08.17

### Added

- Added local and full docker container for DMT-core. It is build in 3 steps
    - Builder: Builds ngspice, adms, trilinos and xyce
    - Base: copys from builder, texlive and installs only necessary runtime and python environment
    - full or Version_XX: Includes the latest or respective DMT install
- dmt example bash script which uses the docker container to run a python/dmt script.
- Generating CycloneDX SBOM from the container
- Added a RuntimeWarning when loading a parameter for a MCard which is out of bounds.
- Added a mdm-reader test case for SkywaterPDK raw measurement data
- Added an example to the docu how to read and handle the SkywaterPDK raw data in a DutLib
- Added McSkywater to simulate Skywater130 PDK models using DutNgspice
- Added an error for non-unique dut names in a DutLib. Names must be unique to generate separate save folders.

### Changed

- Correct Bibtex to cite for the published paper.
- format and test stages of the CI pipeline are done for reg-ex "main" (so incl. "pre-main"), the following only for "main"
- `SpecifierStr.sub_specifiers` are now `frozenset` instead of a list. This fixes the order issue and at the same time improves readability when testing.
- `SpecifierStr.__contains__` now properly testing containement without the shortcut using string casts.